--- a/notes-/index.html
+++ b/notes-/index.html
@@ -9,7 +9,7 @@
 
 <body>
     CONTENT
-    <script src="../notes-/03-if.js" defer></script>
+    <script src="../notes-/04-swich.js" defer></script>
 
 </body>
 
