--- a/js/index.html
+++ b/js/index.html
@@ -9,7 +9,7 @@
 
 <body>
     CONTENT
-    <script src="../notes-/04-swich.js" defer></script>
+    <script src="../js/05-ternary.js" defer></script>
 
 </body>
 
