--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     CONTENT
-    <script src="../js/05-ternary.js" defer></script>
+    <script src="./js/07-for.js" defer></script>
 
 </body>
 
