--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     CONTENT
-    <script src="./js/09-reverse.js" defer></script>
+    <script src="./js/10-liekana.js" defer></script>
 
 </body>
 
