--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     CONTENT
-    <script src="./js/12-marks.js" defer></script>
+    <script src="./js/13-empty.js" defer></script>
 
 </body>
 
