--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     CONTENT
-    <script src="./codewars/geese.js" defer></script>
+    <script src="./codewars/sumStrings.js" defer></script>
 
 </body>
 
